alterações visuais - criação do side menu e topbar

--- a/VaccineC/src/index.html
+++ b/VaccineC/src/index.html
@@ -11,8 +11,9 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body class="mat-typography">
-    <div class="menu">
+    <div>
       <app-root></app-root>
     </div>
 </body>
 </html>
+<script src="https://kit.fontawesome.com/f51e914267.js" crossorigin="anonymous"></script>
