--- a/VaccineC/src/index.html
+++ b/VaccineC/src/index.html
@@ -21,4 +21,5 @@
 </body>
 
 </html>
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <script src="https://kit.fontawesome.com/f51e914267.js" crossorigin="anonymous"></script>
